# zoom-sync-tkl-dyna

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
boards/core/src/: board.rs  features.rs  lib.rs
boards/zoom-tkl-dyna/src/: abi.rs  lib.rs  types.rs
boards/zoom65v3/: README.md
boards/zoom65v3/src/: lib.rs  types.rs
docs/: README.md  zoom-sync.1  zoom-sync.service
examples/: zoom-sync.service
raw/src/: float.rs  lib.rs  types.rs
src/: detection.rs  float.rs  info.rs  main.rs  media.rs  screen.rs  weather.rs
src/tray/: menu.rs  mod.rs
src/zoom65v3/: info.rs  lib.rs  main.rs  screen.rs  weather.rs
src/zoom65v3/board_specific/: abi.rs  float.rs  mod.rs  types.rs  zoom65v3.rs
src/zoom65v3/lib/: float.rs
src/zoomtkldyna/: README.md  abi.rs  info.rs  main.rs  media.rs  screen.rs  types.rs  weather.rs
src/zoomtkldyna/board_specific/: abi.rs  checksum.rs  float.rs  mod.rs  tkldyna.rs  types.rs  zoomtkldyna.rs
zoom65v3/: Cargo.toml
zoom65v3/src/: abi.rs  checksum.rs  consts.rs  float.rs  lib.rs  types.rs
zoomtkldyna/: Cargo.toml
zoomtkldyna/src/: abi.rs  lib.rs  types.rs
