[package]
name = "zoom65v3"
version = "0.1.1"
description = "Reverse engineered hidapi bindings to zoom65v3 screen modules"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2.0"
hidapi = "2.6"
chrono.workspace = true
