[package]
name = "zoom65v3"
version = "0.2.0"
description = "Reverse engineered hidapi bindings to zoom65v3 screen modules"
repository = "https://github.com/ozwaldorf/zoom-sync"
authors = [ "ozwaldorf <self@ossian.dev>" ]
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "2.0"
hidapi = { version = "2.6", features = ["windows-native"] }
chrono.workspace = true
