[package]
name = "zoomtkldyna"
version = "0.1.0"
description = "Reverse engineered hidapi bindings to zoomtkldyna screen modules"
repository = "https://github.com/Phan-2k2/zoom-sync-tkl-dyna"
authors = [ "Phan-2k2" ]
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "2.0"
hidapi = { version = "2.6", features = ["windows-native"] }
chrono.workspace = true
